# tesseland

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  tesselate.py
backend/: manage.py
backend/api/: api.py  schemas.py
backend/engine/: admin.py  models.py  tiles.py
backend/engine/migrations/: 0001_initial.py  0002_alter_player_unique_together_player_is_owner_and_more.py
backend/engine/templates/engine/: index.html
backend/tesseland/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_tiling.py
